--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@types/node": "12.12.8",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/redux-saga": "^0.10.5",
+    "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
     "typesafe-actions": "^5.1.0",
     "typescript": "3.7.2"
   },
